fixed spacing for mobile

--- a/src/components/info_tile.css
+++ b/src/components/info_tile.css
@@ -31,7 +31,7 @@
     }
 
     .info-tile h2 {
-        margin-bottom: 15px !important;
+        margin-bottom: 30px !important;
         font-size: 1.8rem !important;
     }
 }
